@@ -1,3 +1,9 @@
+2012-05-28
+
+	* src/textview.c
+	  src/compose.c: properly set line-space for auto-wrapped lines
+	  (fixes Bug #64).
+
 2012-05-18
 
 	* src/main.c: open compose window before receiving on startup
